force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Cash_Points_Conversion_Value__c.field-meta.xml
<CustomField>
    <fullName>Cash_Points_Conversion_Value__c</fullName>
    <label>Cash Points Conversion Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>