force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Cash_Points_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Cash_Points_Expiration_Date__c</fullName>
    <label>Cash Points Expiration (Date)</label>
    <type>Date</type>
</CustomField>