force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Custom_Cash_Points_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Custom_Cash_Points_Expiration__c</fullName>
    <label>Custom Cash Points Expiration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>