force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Custom_Growth_Point_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Custom_Growth_Point_Expiration__c</fullName>
    <label>Custom Growth Point Expiration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>