force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Growth_Point_Conversion_Mode__c.field-meta.xml
<CustomField>
    <fullName>Growth_Point_Conversion_Mode__c</fullName>
    <label>Growth Point Conversion Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>