force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Growth_Point_Conversion_Value__c.field-meta.xml
<CustomField>
    <fullName>Growth_Point_Conversion_Value__c</fullName>
    <label>Growth Point Conversion Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>