force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Growth_Point_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Growth_Point_Expiration__c</fullName>
    <label>Growth Point Expiration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>