force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/Growth_Point_Expiration_Mode__c.field-meta.xml
<CustomField>
    <fullName>Growth_Point_Expiration_Mode__c</fullName>
    <label>Growth Point Expiration Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Specific Date</fullName>
            </value>
            <value>
                <fullName>Recurrent Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>